--- a/StoreInventoryQuery/Web.config
+++ b/StoreInventoryQuery/Web.config
@@ -5,8 +5,10 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="F360" connectionString="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=113.105.5.234)(PORT=11521))(CONNECT_DATA=(SERVICE_NAME=demoF360)));Persist Security Info=True;User ID=regent;Password=regent;" />
-  </connectionStrings>
+    <add name="F360" connectionString="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=10.40.0.154)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=f360)));Persist Security Info=True;User ID=regent;Password=R6enhy78hf8sn7;" />  </connectionStrings>
+   
+ 
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
